--- a/404.html
+++ b/404.html
@@ -4,10 +4,13 @@
         <title>KYAKIE'S Children</title>
         <style>
             table{
-                border:2px solid black;
+                border:50% solid black;
             }
             th {
                border: 1px solid black;
+            }
+            td{
+              border: 1px solid black;
             }
             td{
               color: #3c33ff ;
